// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-9 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-7 emotion-1 emotion-9 test bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-9 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-7 emotion-1 emotion-9 bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: var(--bb-palette-background,#000000);
  min-height: 60px;
  height: 60px;
  border-bottom: 1px solid var(--bb-palette-white800,#000000);
  z-index: 999;
}

.emotion-3 > * {
  height: 100%;
}

.emotion-7 {
  min-height: 100vh;
  position: relative;
}

.emotion-7 .bb-PageWithSidebarSidebarExpandedWrapper {
  top: 60px;
}

.emotion-7 .bb-PageWithSidebarSidebar {
  height: calc(100vh - 60px);
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-PageWithHeader"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithHeaderHeader bb-Box bb-DisclosureContent"
    id="test"
  >
    <div>
      this is a header
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-6 bb-PageWithHeaderContent bb-Box"
  >
    hello world
  </div>
</div>
`;
